--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 
       <!-- Логотип в хедере-->
       <a class="header-logo" href="index.html">
-        <img class="logo-image" src="#" alt="Логотип сайта Седона">
+        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона">
       </a>
 
       <!-- Главное меню -->
@@ -257,7 +257,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-amara-resort-and-spa.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     Amara Resort & Spa
                   </h4>
@@ -289,7 +289,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-villas-at-poco-diablo.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     Villas at Poco Diablo
                   </h4>
@@ -321,7 +321,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-desert-quail-inn.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     Desert Quail Inn
                   </h4>
@@ -353,7 +353,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-greentree-inn.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     GreenTree Inn
                   </h4>
