--- a/2/catalog.html
+++ b/2/catalog.html
@@ -12,7 +12,7 @@
 
       <!-- Логотип в хедере-->
       <a class="header-logo" href="index.html">
-        <img class="logo-image" src="#" alt="Логотип сайта Седона">
+        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона">
       </a>
 
       <!-- Главное меню -->
@@ -258,7 +258,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-amara-resort-and-spa.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     Amara Resort & Spa
                   </h4>
@@ -290,7 +290,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-villas-at-poco-diablo.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     Villas at Poco Diablo
                   </h4>
@@ -322,7 +322,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-desert-quail-inn.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     Desert Quail Inn
                   </h4>
@@ -354,7 +354,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="#" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-greentree-inn.jpg" width="300" height="212" alt="Фото гостиницы">
                   <h4 class="hotels-title">
                     GreenTree Inn
                   </h4>
