--- a/2/index.html
+++ b/2/index.html
@@ -12,7 +12,7 @@
 
       <!-- Логотип в хедере-->
       <a class="header-logo" href="index.html">
-        <img class="logo-image" src="#" alt="Логотип сайта Седона">
+        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона">
       </a>
 
       <!-- Главное меню -->
@@ -70,7 +70,7 @@
           Туризм в Седоне
         </h1>
         <div class="hero-divider">
-          <img class="hero-slogan" src="#" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
+          <img class="hero-slogan" src="images/index/svg/hero-slogan.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
         </div>
       </section>
 
@@ -100,7 +100,7 @@
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
-            <img class="advantages-photo" src="#" alt="Внешний облик города Седоны">
+            <img class="advantages-photo" src="images/index/advantages-townscape.jpg" width="800" height="385" alt="Внешний облик города Седоны">
           </li>
 
           <!-- 2 преимущество -->
@@ -143,7 +143,7 @@
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
               </p>
             </div>
-            <img class="advantages-photo advantages-photo-order" src="#" alt="Мост Дьявола">
+            <img class="advantages-photo advantages-photo-order" src="images/index/advantages-devils-bridge.jpg" width="800" height="385" alt="Мост Дьявола">
           </li>
 
         </ol>
