--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
 
@@ -197,7 +198,7 @@
         <h2 class="search-hotel-title heading">
           Заинтересовались?
         </h2>
-        <p class="find-hotel-tagline">
+        <p class="search-hotel-tagline">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <a class="button button-link" href="catalog.html">
