Сетка компонентов на флексах

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
           <!-- 5 преимущество -->
           <li class="advantages-item">
-            <div class="reason reason-photo">
+            <div class="reason reason-photo reason-order">
               <h3 class="reason-title">
                 Там есть мост дьявола
               </h3>
@@ -143,7 +143,7 @@
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
               </p>
             </div>
-            <img class="advantages-photo advantages-photo-order" src="images/index/advantages-devils-bridge.jpg" width="800" height="385" alt="Мост Дьявола">
+            <img class="advantages-photo" src="images/index/advantages-devils-bridge.jpg" width="800" height="385" alt="Мост Дьявола">
           </li>
 
         </ol>
@@ -198,7 +198,7 @@
         <h2 class="search-hotel-title heading">
           Заинтересовались?
         </h2>
-        <p class="search-hotel-tagline">
+        <p class="search-hotel-tagline heading-tagline">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <a class="button button-link" href="catalog.html">
@@ -218,8 +218,8 @@
           <label for="email" class="visually-hidden">
             Ваш e-mail
           </label>
-          <input type="text" id="email" name="subscribe-email" placeholder="Ваш e-mail">
-          <button class="subscribe-button button" type="submit">
+          <input class="subscribe-input" type="text" id="email" name="subscribe-email" placeholder="Ваш e-mail">
+          <button class="button" type="submit">
             Подписаться
           </button>
         </form>
