--- a/catalog.html
+++ b/catalog.html
@@ -187,7 +187,7 @@
               <button class="button button-apply" type="submit">
                 Применить
               </button>
-              <button class="button button-reset" type="reset">
+              <button class="button button-apply button-reset" type="reset">
                 Сбросить
               </button>
             </div>
@@ -206,41 +206,46 @@
           <h3 class="visually-hidden">Сортировка гостиниц</h3>
           <p class="search-result">Найдено гостиниц: 38</p>
 
-          <!-- Форма сортировки -->
-          <div class="sorting-form">
-            <label class="visually-hidden" for="sorting">
-              Сортировка
-            </label>
-            <select class="select-control" id="sorting">
-              <option value="cheap" selected>
-                Сначала дешёвые
-              </option>
-              <option value="expensive">
-                Сначала дорогие
-              </option>
-              <option value="popular">
-                Сначала популярные
-              </option>
-            </select>
-          </div>
+          <!-- Обёртка -->
+          <div class="sorting-wrapper">
 
-          <!-- Значки сортировки -->
-          <div class="sorting-view">
-            <a href="#" class="view-button view-button-current view-table">
-              <span class="visually-hidden">
-                Отобразить плиткой
-              </span>
-            </a>
-            <a href="#" class="view-button view-slide">
-              <span class="visually-hidden">
-                Отобразить списком
-              </span>
-            </a>
-            <a href="#" class="view-button view-list">
-              <span class="visually-hidden">
-                Отобразить слайдшоу
-              </span>
-            </a>
+            <!-- Форма сортировки -->
+            <div class="sorting-form">
+              <label class="visually-hidden" for="sorting">
+                Сортировка
+              </label>
+              <select class="select-control" id="sorting">
+                <option value="cheap" selected>
+                  Сначала дешёвые
+                </option>
+                <option value="expensive">
+                  Сначала дорогие
+                </option>
+                <option value="popular">
+                  Сначала популярные
+                </option>
+              </select>
+            </div>
+
+            <!-- Значки сортировки -->
+            <div class="sorting-view">
+              <a href="#" class="view-button view-button-current view-table">
+                <span class="visually-hidden">
+                  Отобразить плиткой
+                </span>
+              </a>
+              <a href="#" class="view-button view-slide">
+                <span class="visually-hidden">
+                  Отобразить списком
+                </span>
+              </a>
+              <a href="#" class="view-button view-list">
+                <span class="visually-hidden">
+                  Отобразить слайдшоу
+                </span>
+              </a>
+            </div>
+
           </div>
 
         </section>
@@ -434,7 +439,7 @@
             Ваш e-mail
           </label>
           <input class="subscribe-input" type="text" id="email" name="subscribe-email" placeholder="Ваш e-mail" required>
-          <button class="subscribe-button button" type="submit">
+          <button class="button" type="submit">
             Подписаться
           </button>
         </form>
