Сетки на гридах для компонентов

--- a/catalog.html
+++ b/catalog.html
@@ -480,7 +480,7 @@
 
       <!-- Телефон -->
       <address class="footer-address">
-        <a class="footer-address-phone" href="tel:+78128121212">
+        <a class="footer-phone" href="tel:+78128121212">
           +7 (812) 812-12-12
         </a>
       </address>
