--- a/index.html
+++ b/index.html
@@ -280,5 +280,115 @@
 
     </footer>
 
+    <!-- Модальное окно -->
+    <div class="modal-container">
+      <div class="modal">
+        <button class="modal-close">
+          <svg class="close-icon" aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z"/></svg>
+          <span class="visually-hidden">
+            Закрыть
+          </span>
+        </button>
+
+        <!-- Содержимое модального окна -->
+        <section class="modal-content">
+          <h2 class="modal-title heading">
+            Поиск гостиницы в Седоне
+          </h2>
+
+          <!-- Форма модального окна -->
+          <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+
+            <!-- Дата -->
+            <fieldset class="modal-group date">
+              <div class="date-container">
+                <label class="modal-label" for="arrival">
+                  Дата заезда:
+                </label>
+                <input class="date-input" type="text" id="arrival" name="arrival-date" placeholder="Укажите дату" value="27 апреля 2020" required>
+                <button class="date-calendar" type="button">
+                  <span class="visually-hidden">
+                    Выбрать дату в календаре
+                  </span>
+                </button>
+                <p class="date-warning date-warning-error">
+                  Мы не можем отправить вас в прошлое.
+                </p>
+              </div>
+              <div class="date-container">
+                <label class="modal-label" for="departure">
+                  Дата выезда:
+                </label>
+                <input class="date-input" type="text" id="departure" name="departure-date" placeholder="Укажите дату" value="1 сентября 2023" required>
+                <button class="date-calendar" type="button">
+                  <span class="visually-hidden">
+                    Выбрать дату в календаре
+                  </span>
+                </button>
+                <p class="date-warning">
+                  На эти даты есть свободные номера. Пока есть.
+                </p>
+              </div>
+            </fieldset>
+
+            <!-- Количество гостей -->
+            <fieldset class="modal-group guests">
+
+              <!-- Взрослые -->
+              <div class="guests-container">
+                <label class="modal-label guests-label" for="adults">
+                  Взрослые:
+                </label>
+                <button class="guests-button guests-less" type="button">
+                  <svg class="guests-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v2h14V9H3Z"/></svg>
+                  <span class="visually-hidden">Меньше гостей</span>
+                </button>
+                <input class="guests-input" type="number" id="adults" name="adult-guests" value="2" placeholder="0" required>
+                <button class="guests-button guests-more" type="button">
+                  <svg class="guests-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z"/></svg>
+                  <span class="visually-hidden">Больше гостей</span>
+                </button>
+              </div>
+
+              <!-- Дети (с тултипом) -->
+              <div class="guests-container">
+                <div class="tooltip-container">
+                  <label class="modal-label guests-label guests-label-children" for="children">
+                    Дети:
+                  </label>
+
+                  <!-- Тултип-->
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                    </button>
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label-date">
+                      Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                    </span>
+                  </span>
+
+                  <button class="guests-button guests-less" type="button">
+                    <svg class="guests-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v2h14V9H3Z"/></svg>
+                    <span class="visually-hidden">Меньше гостей</span>
+                  </button>
+                  <input class="guests-input" type="number" id="children" name="children-guests" value="2" placeholder="0" required>
+                  <button class="guests-button guests-more" type="button">
+                    <svg class="guests-icon" aria-hidden="true" focusable="false" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M17 9h-6V3H9v6H3v2h6v6h2v-6h6V9Z"/></svg>
+                    <span class="visually-hidden">Больше гостей</span>
+                  </button>
+                </div>
+              </div>
+
+            </fieldset
+
+            <!-- Кнопка модального окна -->
+            <button class="modal-button button" type="submit">
+              Найти
+            </button>
+
+          </form>
+        </section>
+      </div>
+    </div>
+
   </body>
 </html>
