--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
 
@@ -378,7 +379,7 @@
                 </div>
               </div>
 
-            </fieldset
+            </fieldset>
 
             <!-- Кнопка модального окна -->
             <button class="modal-button button" type="submit">
