Доработка по макету

--- a/catalog.html
+++ b/catalog.html
@@ -459,7 +459,7 @@
           Подпишитесь на рассылку
         </h2>
         <p class="subscribe-tagline">
-          Только полезная информация и никакого спама, честное бойскаутское!
+          Только полезная информация и никакого спама,<br>честное бойскаутское!
         </p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="email" class="visually-hidden">
@@ -623,7 +623,7 @@
                 </div>
               </div>
 
-            </fieldset
+            </fieldset>
 
             <!-- Кнопка модального окна -->
             <button class="modal-button button" type="submit">
