--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <li class="advantages-item">
             <div class="reason reason-photo reason-order">
               <h3 class="reason-title">
-                Там есть мост дьявола
+                Там есть<br>мост дьявола
               </h3>
               <p class="reason-tagline">
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
@@ -157,8 +157,8 @@
 
         <!-- Шапка сервисов -->
         <header class="services-header">
-          <h2 class="services-title heading">
-            Приезжайте в Седону отдохнуть в комфорте и уюте!
+          <h2 class="services-heading heading">
+            Приезжайте в Седону отдохнуть<br>в комфорте и уюте!
           </h2>
           <p class="heading-tagline">
             Опытный персонал и качественное обслуживание!
@@ -173,7 +173,7 @@
               Жильё
             </h3>
             <p class="reason-tagline services-tagline">
-              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+              Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!
             </p>
           </li>
           <li class="services-item services-food">
@@ -181,7 +181,7 @@
               Еда
             </h3>
             <p class="reason-tagline services-tagline">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!
             </p>
           </li>
           <li class="services-item services-souvenir">
@@ -189,7 +189,7 @@
               Сувениры
             </h3>
             <p class="reason-tagline services-tagline">
-              Не только китайского, но и настоящего местного производства!
+              Не только китайского,<br>но и настоящего местного производства!
             </p>
           </li>
 
@@ -202,7 +202,7 @@
           Заинтересовались?
         </h2>
         <p class="search-hotel-tagline heading-tagline">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+          Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <a class="button button-link" href="catalog.html">
           Поиск гостиницы в Cедоне
@@ -215,7 +215,7 @@
           Подпишитесь на рассылку
         </h2>
         <p class="subscribe-tagline">
-          Только полезная информация и никакого спама, честное бойскаутское!
+          Только полезная информация и никакого спама,<br>честное бойскаутское!
         </p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <label for="email" class="visually-hidden">
@@ -282,7 +282,7 @@
     </footer>
 
     <!-- Модальное окно -->
-    <div class="modal-container">
+    <div class="modal-container modal-hidden">
       <div class="modal">
         <button class="modal-close">
           <svg class="close-icon" aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z"/></svg>
