Исправляет проект по результатам первой защиты

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon.png">
   </head>
   <body>
     <!-- Хедер -->
     <header class="page-header">
       <!-- Логотип в хедере-->
       <a class="header-logo" href="index.html">
-        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона">
+        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона.">
       </a>
       <!-- Главное меню -->
       <nav class="main-navigation">
@@ -65,9 +66,7 @@
         <h1 class="visually-hidden">
           Туризм в Седоне
         </h1>
-        <div class="hero-divider">
-          <img class="hero-slogan" src="images/index/svg/hero-slogan.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
-        </div>
+        <img class="hero-slogan" src="images/index/svg/hero-slogan.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks!">
       </section>
       <!-- Преимущества -->
       <section class="advantages">
@@ -92,7 +91,7 @@
                 Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
             </div>
-            <img class="advantages-photo" src="images/index/advantages-townscape.jpg" width="800" height="385" alt="Внешний облик города Седоны">
+            <img class="advantages-photo" src="images/index/advantages-townscape.jpg" width="800" height="385" alt="Внешний облик города Седоны.">
           </li>
           <!-- 2 преимущество -->
           <li class="reason">
@@ -131,7 +130,7 @@
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
               </p>
             </div>
-            <img class="advantages-photo" src="images/index/advantages-devils-bridge.jpg" width="800" height="385" alt="Мост Дьявола">
+            <img class="advantages-photo" src="images/index/advantages-devils-bridge.jpg" width="800" height="385" alt="Мост Дьявола.">
           </li>
         </ol>
       </section>
@@ -254,12 +253,6 @@
     <!-- Модальное окно -->
     <div class="modal-container modal-hidden">
       <div class="modal">
-        <button class="modal-close">
-          <svg class="close-icon" aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z"/></svg>
-          <span class="visually-hidden">
-            Закрыть
-          </span>
-        </button>
         <!-- Содержимое модального окна -->
         <section class="modal-content">
           <h2 class="modal-title heading">
@@ -347,6 +340,12 @@
             </button>
           </form>
         </section>
+        <button class="modal-close" type="button">
+          <svg class="close-icon" aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z"/></svg>
+          <span class="visually-hidden">
+            Закрыть
+          </span>
+        </button>
       </div>
     </div>
   </body>
