--- a/catalog.html
+++ b/catalog.html
@@ -5,13 +5,14 @@
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon.png">
   </head>
   <body>
     <!-- Хедер -->
     <header class="page-header">
       <!-- Логотип в хедере-->
       <a class="header-logo" href="index.html">
-        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона">
+        <img class="logo-image" src="images/logo/sedona-logo.svg" width="140" height="70" alt="Логотип сайта Седона.">
       </a>
       <!-- Главное меню -->
       <nav class="main-navigation">
@@ -126,7 +127,7 @@
             <!-- Радиокнопки -->
             <fieldset class="filter-group">
               <legend class="filter-title">
-                Тип жилья:
+                Тип Жилья:
               </legend>
               <ul class="filter-list">
                 <li class="filter-item">
@@ -223,7 +224,7 @@
               </label>
               <select class="select-control" id="sorting">
                 <option value="cheap" selected>
-                  Сначала дешёвые
+                  Сначала дешевые
                 </option>
                 <option value="expensive">
                   Сначала дорогие
@@ -264,7 +265,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="images/catalog/hotel-amara-resort-and-spa.jpg" width="300" height="212" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-amara-resort-and-spa.jpg" width="300" height="212" alt="Фото гостиницы.">
                   <h4 class="hotels-title">
                     Amara Resort & Spa
                   </h4>
@@ -278,9 +279,9 @@
                 <a href="#" class="hotels-button button button-link">
                   Подробнее
                 </a>
-                <a href="#" class="hotels-button button favorite">
+                <button class="hotels-button button favorite" type="button">
                   В избранное
-                </a>
+                </button>
                 <div class="hotels-stars hotels-stars-four">
                   <span class="visually-hidden">
                     Количество звёзд: 4 звёзды
@@ -295,7 +296,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="images/catalog/hotel-villas-at-poco-diablo.jpg" width="300" height="212" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-villas-at-poco-diablo.jpg" width="300" height="212" alt="Фото гостиницы.">
                   <h4 class="hotels-title">
                     Villas at Poco Diablo
                   </h4>
@@ -309,9 +310,9 @@
                 <a href="#" class="hotels-button button button-link">
                   Подробнее
                 </a>
-                <a href="#" class="hotels-button button favorite favorite-selected">
+                <button class="hotels-button button favorite favorite-selected" type="button">
                   В избранном
-                </a>
+                </button>
                 <div class="hotels-stars hotels-stars-four">
                   <span class="visually-hidden">
                     Количество звёзд: 4 звёзды
@@ -326,7 +327,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="images/catalog/hotel-desert-quail-inn.jpg" width="300" height="212" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-desert-quail-inn.jpg" width="300" height="212" alt="Фото гостиницы.">
                   <h4 class="hotels-title">
                     Desert Quail Inn
                   </h4>
@@ -340,9 +341,9 @@
                 <a href="#" class="hotels-button button button-link">
                   Подробнее
                 </a>
-                <a href="#" class="hotels-button button favorite">
+                <button class="hotels-button button favorite" type="button">
                   В избранное
-                </a>
+                </button>
                 <div class="hotels-stars hotels-stars-three">
                   <span class="visually-hidden">
                     Количество звёзд: 3 звёзды
@@ -357,7 +358,7 @@
             <li class="hotels-item">
               <div class="hotels-card">
                 <a class="hotels-link" href="#">
-                  <img class="hotels-image" src="images/catalog/hotel-greentree-inn.jpg" width="300" height="212" alt="Фото гостиницы">
+                  <img class="hotels-image" src="images/catalog/hotel-greentree-inn.jpg" width="300" height="212" alt="Фото гостиницы.">
                   <h4 class="hotels-title">
                     GreenTree Inn
                   </h4>
@@ -371,9 +372,9 @@
                 <a href="#" class="hotels-button button button-link">
                   Подробнее
                 </a>
-                <a href="#" class="hotels-button button favorite">
+                <button class="hotels-button button favorite" type="button">
                   В избранное
-                </a>
+                </button>
                 <div class="hotels-stars hotels-stars-two">
                   <span class="visually-hidden">
                     Количество звёзд: 2 звёзды
@@ -488,12 +489,6 @@
     <!-- Модальное окно -->
     <div class="modal-container modal-hidden">
       <div class="modal">
-        <button class="modal-close">
-          <svg class="close-icon" aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z"/></svg>
-          <span class="visually-hidden">
-            Закрыть
-          </span>
-        </button>
         <!-- Содержимое модального окна -->
         <section class="modal-content">
           <h2 class="modal-title heading">
@@ -581,6 +576,12 @@
             </button>
           </form>
         </section>
+        <button class="modal-close" type="button">
+          <svg class="close-icon" aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z"/></svg>
+          <span class="visually-hidden">
+            Закрыть
+          </span>
+        </button>
       </div>
     </div>
   </body>
